Fixed norm and segfault on different map format, removed lag near walls

--- a/src/get_next_line/Makefile
+++ b/src/get_next_line/Makefile
@@ -1,10 +1,10 @@
-SRCS := $(wildcard *.c)
+SRCS := get_next_line.c get_next_line_utils.c
 
 OBJ_DIR := ../../obj
 
 OBJS := $(addprefix $(OBJ_DIR)/, $(SRCS:.c=.o))
 
-CFLAGS := -I../../includes
+CFLAGS := -I../../includes -Wall -Werror -Wextra
 
 all: $(OBJS)
 
