--- a/src/ft_libc/Makefile
+++ b/src/ft_libc/Makefile
@@ -1,10 +1,10 @@
-SRCS := $(wildcard *.c)
+SRCS := ft_atoi.c ft_realloc.c ft_strchr.c ft_strcmp.c ft_strdup.c ft_strlen.c
 
 OBJ_DIR := ../../obj
 
 OBJS := $(addprefix $(OBJ_DIR)/, $(SRCS:.c=.o))
 
-CFLAGS := -I../../includes
+CFLAGS := -I../../includes -Wall -Werror -Wextra
 
 all: $(OBJS)
 
