--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -1,10 +1,10 @@
-SRCS := $(wildcard *.c)
+SRCS := cub3.c linegen.c movement.c raycam.c rendering.c rendering_utils.c
 
 OBJ_DIR := ../../obj
 
 OBJS := $(addprefix $(OBJ_DIR)/, $(SRCS:.c=.o))
 
-CFLAGS := -I../../includes -g
+CFLAGS := -I../../includes -Wall -Werror -Wextra
 
 all: $(OBJS)
 
