Compiler now explicitly set as "clang" to avoid weird brace behaviour with GCC.

--- a/src/ft_libc/Makefile
+++ b/src/ft_libc/Makefile
@@ -1,5 +1,7 @@
 SRCS := ft_atoi.c ft_realloc.c ft_strchr.c ft_strcmp.c ft_strdup.c ft_strlen.c
 
+CC = clang
+
 OBJ_DIR := ../../obj
 
 OBJS := $(addprefix $(OBJ_DIR)/, $(SRCS:.c=.o))
