--- a/src/main/Makefile
+++ b/src/main/Makefile
@@ -1,5 +1,7 @@
 SRCS := cub3.c linegen.c movement.c raycam.c rendering.c rendering_utils.c fog.c
 
+CC = clang
+
 OBJ_DIR := ../../obj
 
 OBJS := $(addprefix $(OBJ_DIR)/, $(SRCS:.c=.o))
