--- a/src/map_parsing/Makefile
+++ b/src/map_parsing/Makefile
@@ -1,5 +1,7 @@
 SRCS := 2d_char_utils.c cell_utils.c map.c map_utils.c parsing.c parsing_settings.c player.c skip_spaces.c
 
+CC = clang
+
 OBJ_DIR := ../../obj
 
 OBJS := $(addprefix $(OBJ_DIR)/, $(SRCS:.c=.o))
